[tool.poetry]
name = "loading"
version = "0.1.0"
description = "Matrix data loading program"
authors = ["wkerdad"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.2.2"
requests = "2.32.3"
matplotlib = "3.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"